# Fasih-TTS-V1

./: .dockerignore  .env.example  .gitignore  COPYRIGHT  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
assets/benchmark/: silma_msa_detailed.csv  silma_msa_nemo.csv  silma_msa_scores.csv  silma_msa_utmos.csv
configs/: eval_sentences_ar.txt  stress_sentences_ar.txt
configs/training/: xtts_finetune.yaml
docs/: phase2_dataset_report.md  phase3_text_pipeline.md  phase4_preprocessing.md  phase5_xtts_finetune.md  phase7_8_eval_serving.md  silma_benchmark.md
docs/blog/: fasih-tts-article.md
fasih_tts_server/: Dockerfile  Dockerfile.cpu  README.md  build_and_push.sh  requirements.txt  server.py
nemo_stt/: README.md  server.py
scripts/: brand.py  build_eval_dataset.py  build_xtts_dataset.py  check_env.py  deploy_space.sh  diacritize_corpus.py  download_data.py  evaluate_cer.py  make_architecture.py  make_banner.py  make_benchmark_chart.py  make_poster.py  nemo_compare.py  preprocess_audio.py  run_xtts_tmux.sh  say.py  serve.py  silma_benchmark.py  silma_compare.py  synth_samples.py  synthesize_xtts.py  train_xtts.py  utmos_compare.py  validate_dataset.py
space_build/: README.md  app.py  requirements.txt
src/tts/: __init__.py
src/tts/audio/: __init__.py  preprocess.py  quality.py
src/tts/eval/: __init__.py
src/tts/infer/: __init__.py  engine.py
src/tts/text/: __init__.py  chunk.py  diacritics.py  diacritize.py  normalize.py  numbers.py  pipeline.py
src/tts/text/catt/: __init__.py
src/tts/train/: __init__.py
src/tts/utils/: __init__.py
tests/: test_chunk_numbers.py  test_text.py
